objects/Migration_Discount__mdt/Migration_Discount__mdt.object-meta.xml
<CustomObject>
    <label>Migration Discount</label>
    <pluralLabel>Migration Discounts</pluralLabel>
</CustomObject>