objects/Migration_Discount__mdt/fields/Account_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector__c</fullName>
    <label>Account Sector</label>
    <length>40</length>
    <type>Text</type>
</CustomField>