objects/Migration_Discount__mdt/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <label>Account Segment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>