objects/Migration_Discount__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>