objects/Migration_Discount__mdt/fields/Promo_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount__c</fullName>
    <label>Promo Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>