objects/Migration_Discount__mdt/fields/Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percent__c</fullName>
    <label>Uplift Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>